--- a/src/template.html
+++ b/src/template.html
@@ -1,84 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+		<link
+			rel="stylesheet"
+			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Title</title>
 		<!-- Required meta tags -->
 		<meta charset="utf-8" />
-		<!-- <meta
-			name="viewport"
-			content="width=device-width, initial-scale=1, shrink-to-fit=no"
-		/> -->
-
-		<!-- Bootstrap CSS -->
-		<!-- <link
-			rel="stylesheet"
-			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-			crossorigin="anonymous"
-		/> -->
 	</head>
 	<body>
-		<!-- Nav tabs -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<a class="navbar-brand" href="#">Navbar</a>
-			<button
-				class="navbar-toggler"
-				type="button"
-				data-toggle="collapse"
-				data-target="#navbarSupportedContent"
-				aria-controls="navbarSupportedContent"
-				aria-expanded="false"
-				aria-label="Toggle navigation"
-			>
-				<span class="navbar-toggler-icon"></span>
-			</button>
-
-			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-				<ul class="navbar-nav mr-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="#"
-							>Home <span class="sr-only">(current)</span></a
-						>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Link</a>
-					</li>
-					<li class="nav-item dropdown">
-						<a
-							class="nav-link dropdown-toggle"
-							href="#"
-							id="navbarDropdown"
-							role="button"
-							data-toggle="dropdown"
-							aria-haspopup="true"
-							aria-expanded="false"
-						>
-							Dropdown
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a class="dropdown-item" href="#">Action</a>
-							<a class="dropdown-item" href="#">Another action</a>
-							<div class="dropdown-divider"></div>
-							<a class="dropdown-item" href="#">Something else here</a>
-						</div>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link disabled" href="#">Disabled</a>
-					</li>
-				</ul>
-				<form class="form-inline my-2 my-lg-0">
-					<input
-						class="form-control mr-sm-2"
-						type="search"
-						placeholder="Search"
-						aria-label="Search"
-					/>
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-						Search
-					</button>
-				</form>
+		<header>
+			<h1>Todo List</h1>
+		</header>
+		<form>
+			<div class="form-group">
+				<input
+					type="text"
+					class="form-control todo-input"
+					id="formGroupExampleInput"
+					placeholder="Example tdod"
+				/>
 			</div>
-		</nav>
+			<div class="form-group">
+				<button type="submit" class="btn btn-primary todo-btn">
+					<i class="fa fa-plus-square" aria-hidden="true"></i>
+				</button>
+			</div>
+			<div class="form-group ml-2">
+				<select
+					class="form-control filter-todo"
+					name="todos"
+					id="exampleFormControlSelect1"
+				>
+					<option value="all">All</option>
+					<option value="completed">Completed</option>
+					<option value="uncompleted">Uncompleted</option>
+				</select>
+			</div>
+		</form>
+		<div class="todo-container">
+			<ul class="todo-list"></ul>
+		</div>
 
 		<div><h1>Hello guys</h1></div>
 		<div><img src="./assets/guarantee-200.png" alt="guarantee" /></div>
